--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
+AddDefaultCharset utf-8
+ErrorDocument 404 /
+
+php_value error_reporting 7
+
 RewriteEngine on
 RewriteBase /
-Options All -Indexes
-RewriteCond %{REQUEST_FILENAME} -s [OR]
-RewriteCond %{REQUEST_FILENAME} -l [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^resource/(.*)$ resource/$1 [L]
-RewriteRule ^img/(.*)$ img/$1 [L]
-RewriteRule ^style/(.*)$ style/$1 [L]
-RewriteRule ^js/(.*)$ js/$1 [L]
-RewriteRule ^.*$ [NC,L]
-RewriteRule ^.*$ index.php [NC,L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+RewriteRule ^(.*)$ index.php
